// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/nebulas/Col renders a default <Col /> 1`] = `
<StyledComponent
  align="center"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Col-inu58n-0",
        "isStatic": false,
        "rules": Array [
          "align-items:",
          [Function],
          ";display:flex;flex-direction:",
          [Function],
          ";justify-content:center;width:",
          [Function],
          ";",
          [Function],
          " *:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "align": "center",
        "padding": null,
        "reverse": false,
      },
      "displayName": "Col",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "align": [Function],
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Col-inu58n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={false}
/>
`;

exports[`components/nebulas/Col renders a flex-end <Col /> 1`] = `
<StyledComponent
  align="flex-end"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Col-inu58n-0",
        "isStatic": false,
        "rules": Array [
          "align-items:",
          [Function],
          ";display:flex;flex-direction:",
          [Function],
          ";justify-content:center;width:",
          [Function],
          ";",
          [Function],
          " *:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "align": "center",
        "padding": null,
        "reverse": false,
      },
      "displayName": "Col",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "align": [Function],
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Col-inu58n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={false}
/>
`;

exports[`components/nebulas/Col renders a flex-start <Col /> 1`] = `
<StyledComponent
  align="flex-start"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Col-inu58n-0",
        "isStatic": false,
        "rules": Array [
          "align-items:",
          [Function],
          ";display:flex;flex-direction:",
          [Function],
          ";justify-content:center;width:",
          [Function],
          ";",
          [Function],
          " *:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "align": "center",
        "padding": null,
        "reverse": false,
      },
      "displayName": "Col",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "align": [Function],
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Col-inu58n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={false}
/>
`;

exports[`components/nebulas/Col renders a padded <Col /> 1`] = `
<StyledComponent
  align="center"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Col-inu58n-0",
        "isStatic": false,
        "rules": Array [
          "align-items:",
          [Function],
          ";display:flex;flex-direction:",
          [Function],
          ";justify-content:center;width:",
          [Function],
          ";",
          [Function],
          " *:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "align": "center",
        "padding": null,
        "reverse": false,
      },
      "displayName": "Col",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "align": [Function],
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Col-inu58n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={100}
  reverse={false}
/>
`;

exports[`components/nebulas/Col renders a reverse <Col /> 1`] = `
<StyledComponent
  align="center"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Col-inu58n-0",
        "isStatic": false,
        "rules": Array [
          "align-items:",
          [Function],
          ";display:flex;flex-direction:",
          [Function],
          ";justify-content:center;width:",
          [Function],
          ";",
          [Function],
          " *:last-child{margin-bottom:0;}",
        ],
      },
      "defaultProps": Object {
        "align": "center",
        "padding": null,
        "reverse": false,
      },
      "displayName": "Col",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "align": [Function],
        "padding": [Function],
        "reverse": [Function],
      },
      "render": [Function],
      "styledComponentId": "Col-inu58n-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  padding={null}
  reverse={true}
/>
`;
